fix(item): ios active state has correct contrast

--- a/core/src/components/item/item.ios.scss
+++ b/core/src/components/item/item.ios.scss
@@ -11,8 +11,18 @@
   --inner-padding-end: #{$item-ios-padding-end};
   --inner-border-width: #{0px 0px $item-ios-border-bottom-width 0px};
   --background: #{$item-ios-background};
-  --background-activated: #000;
-  --background-focused: #000;
+  /**
+   * The active/focus states need
+   * to be the opposite of the background color
+   * so there is enough contrast. The background
+   * defaults to $background-color, so we
+   * default to $text-color which will give us
+   * the opposite color.
+   * i.e. is $background-color is #000
+   * then $text-color will be #fff.
+   */
+  --background-activated: #{$text-color};
+  --background-focused: #{$text-color};
   --background-hover: currentColor;
   --background-activated-opacity: .12;
   --background-focused-opacity: .15;
